# boom

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md  clippy.toml  install.ps1  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
configs/examples/: anvil-rpc.toml  basic-eth.toml  basic-jsonrpc.toml  engine-jwt.toml  engine-ssz.toml  mini-eth.toml  scenario.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: mock_rpc.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/compare/: Cargo.toml
crates/compare/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
docs/: config.md  usage.md
observability/: README.md  prometheus.yml
observability/grafana/: boom-dashboard.json
