[package]
name = "boom"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Production-oriented Ethereum JSON-RPC benchmarking and comparison CLI"
readme = "../../README.md"
publish = false

[[bin]]
name = "boom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
client = { path = "../client" }
common = { path = "../common" }
compare = { path = "../compare" }
discovery = { path = "../discovery" }
futures.workspace = true
hdrhistogram.workspace = true
report = { path = "../report" }
runner = { path = "../runner" }
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
