[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
client = { path = "../client" }
common = { path = "../common" }
futures.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
